--- a/backend/blackjackB/requirements.txt
+++ b/backend/blackjackB/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 certifi==2021.5.30
 charset-normalizer==2.0.4
 Django==3.2.5
+django-cors-headers==3.7.0
 djangorestframework==3.12.4
 idna==3.2
 psycopg2==2.9.1
