--- a/backend/blackjackB/requirements.txt
+++ b/backend/blackjackB/requirements.txt
@@ -4,8 +4,10 @@ charset-normalizer==2.0.4
 Django==3.2.5
 django-cors-headers==3.7.0
 djangorestframework==3.12.4
+djangorestframework-jwt==1.11.0
 idna==3.2
 psycopg2==2.9.1
+PyJWT==1.7.1
 pytz==2021.1
 requests==2.26.0
 sqlparse==0.4.1
